# math4171

./: README.md  compile_commands.json  syllabus
assignment1/: root.aux  root.out  src
assignment1/latex/: root.tex
doc/: Doxyfile  build-docs.sh  open-docs.sh
doc/html/: Info.plist  Makefile  Nodes.xml  Tokens.xml  _8ycm__extra__conf_8py.html  _8ycm__extra__conf_8py_a42a14573593ce75cd6e385a85326111f_cgraph.map  _8ycm__extra__conf_8py_a42a14573593ce75cd6e385a85326111f_cgraph.md5  _8ycm__extra__conf_8py_a42a14573593ce75cd6e385a85326111f_icgraph.map  _8ycm__extra__conf_8py_a42a14573593ce75cd6e385a85326111f_icgraph.md5  _8ycm__extra__conf_8py_a51f8bcdc9a3b791e6a88d798e6c786b3_cgraph.map  _8ycm__extra__conf_8py_a51f8bcdc9a3b791e6a88d798e6c786b3_cgraph.md5  _8ycm__extra__conf_8py_a6bb59f541be0dcbde53eba606d48ddf8_icgraph.map  _8ycm__extra__conf_8py_a6bb59f541be0dcbde53eba606d48ddf8_icgraph.md5  _8ycm__extra__conf_8py_aa20d30f8cc08fc0ab076b4cf458e0d3d_icgraph.map  _8ycm__extra__conf_8py_aa20d30f8cc08fc0ab076b4cf458e0d3d_icgraph.md5  _8ycm__extra__conf_8py_aab283cdb607efa6a1a7aaa3f089c63f1_icgraph.map  _8ycm__extra__conf_8py_aab283cdb607efa6a1a7aaa3f089c63f1_icgraph.md5  _axes_8cpp.html  _axes_8cpp__incl.map  _axes_8cpp__incl.md5  _axes_8hpp.html  _axes_8hpp__dep__incl.map  _axes_8hpp__dep__incl.md5  _axes_8hpp__incl.map  _axes_8hpp__incl.md5  _axes_8hpp_source.html  _contour_plot_8cpp.html  _contour_plot_8cpp__incl.map  _contour_plot_8cpp__incl.md5  _contour_plot_8hpp.html  _contour_plot_8hpp__dep__incl.map  _contour_plot_8hpp__dep__incl.md5  _contour_plot_8hpp__incl.map  _contour_plot_8hpp__incl.md5  _contour_plot_8hpp_source.html  _core_math_8cpp.html  _core_math_8cpp__incl.map  _core_math_8cpp__incl.md5  _core_math_8hpp.html  _core_math_8hpp__dep__incl.map  (+519 more)
doc/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  (+42 more)
include/: matplotlibcpp.h
src/: .ycm_extra_conf.py  .ycm_extra_conf.py.old  CMakeLists.txt
src/arcmath/: CMakeLists.txt  CoreMath.cpp  CoreMath.hpp  IPythonContext.cpp  IPythonContext.hpp  Mat.hpp  Mat.inl  MinNelderMead.cpp  MinNelderMead.hpp  PythonContext.cpp  PythonContext.hpp  Vec.hpp  Vec.inl  foo.py
src/arcmath/old/: PythonContext.cpp
src/arcplot/: Axes.cpp  Axes.hpp  CMakeLists.txt  ContourPlot.cpp  ContourPlot.hpp  Figure.cpp  Figure.hpp  ListPlot.cpp  ListPlot.hpp  SurfPlot3d.cpp  SurfacePlot.cpp  SurfacePlot.hpp
src/arcplot/old/: SurfPlot3d.cpp  SurfPlot3d.hpp
src/arcplot/pythonscripts/: arcplots.py  foo.py
src/arcpython/: ArcPlot.hpp  CMakeLists.txt  PythonCommon.cpp  PythonCommon.hpp  PythonContext.cpp  PythonContext.hpp  PythonFloat.cpp  PythonFloat.hpp  PythonFunction.cpp  PythonFunction.hpp  PythonList.cpp  PythonList.hpp  PythonModule.cpp  PythonModule.hpp  PythonObject.cpp  PythonObject.hpp  PythonString.cpp  PythonString.hpp  PythonTuple.cpp  PythonTuple.hpp  PythonTupple.cpp  PythonTupple.hpp  foo.py
src/assignment1-src/: CMakeLists.txt  Main.cpp  NelderMeadMinimize.cpp  NelderMeadMinimize.hpp
src/playground/: CMakeLists.txt  Main.cpp
